[gd_scene load_steps=10 format=3 uid="uid://dwxtua5310fs6"]

[ext_resource type="Script" path="res://scripts/wrong_answer.gd" id="1_suocw"]
[ext_resource type="FontFile" uid="uid://bt5pn0ptnei0q" path="res://fonts/Bungee/Bungee-Regular.ttf" id="2_5gjy3"]
[ext_resource type="Shader" path="res://tres/blur_shader.gdshader" id="2_pnpv3"]
[ext_resource type="Texture2D" uid="uid://ciyqmt0ta5qxt" path="res://sprites/icon.svg" id="3_xrdib"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_70asp"]
shader = ExtResource("2_pnpv3")
shader_parameter/lod = 1.0
shader_parameter/mix_percentage = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3yl6m"]
bg_color = Color(0.894118, 0.533333, 0.235294, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37noc"]
bg_color = Color(0.988235, 0.952941, 0.92549, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m7c8l"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lm8r3"]
bg_color = Color(0.882353, 0.341176, 0.301961, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="CorrectAnswer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_suocw")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_70asp")
layout_mode = 0
offset_left = -805.0
offset_top = -602.0
offset_right = 2125.0
offset_bottom = 1484.0
texture = ExtResource("3_xrdib")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 600.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3yl6m")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 1190.0
offset_bottom = 590.0
theme_override_styles/panel = SubResource("StyleBoxFlat_37noc")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 200.0
theme_override_colors/font_color = Color(0.85098, 0.176471, 0.12549, 1)
theme_override_fonts/font = ExtResource("2_5gjy3")
theme_override_font_sizes/font_size = 100
text = "CONGRATULATIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_top = 140.0
offset_right = 1200.0
offset_bottom = 340.0
theme_override_colors/font_color = Color(0.85098, 0.176471, 0.12549, 1)
theme_override_fonts/font = ExtResource("2_5gjy3")
theme_override_font_sizes/font_size = 60
text = "YOU USED XX SECONDS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Close" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_left = 425.0
offset_top = 310.0
offset_right = 465.0
offset_bottom = 350.0

[node name="Panel3" type="Panel" parent="Close"]
layout_mode = 0
offset_right = 350.0
offset_bottom = 140.0
theme_override_styles/panel = SubResource("StyleBoxFlat_m7c8l")

[node name="Panel4" type="Panel" parent="Close"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 340.0
offset_bottom = 130.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lm8r3")

[node name="Label3" type="Label" parent="Close"]
layout_mode = 0
offset_right = 350.0
offset_bottom = 140.0
theme_override_fonts/font = ExtResource("2_5gjy3")
theme_override_font_sizes/font_size = 70
text = "CLOSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClickArea" type="Panel" parent="Close"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 350.0
offset_bottom = 140.0

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_top = 420.0
offset_right = 1200.0
offset_bottom = 620.0
theme_override_colors/font_color = Color(0.882353, 0.341176, 0.301961, 1)
theme_override_fonts/font = ExtResource("2_5gjy3")
theme_override_font_sizes/font_size = 60
text = "AUTOCLOSE IN 5 SECONDS"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="Close/ClickArea" to="." method="_on_click_area_gui_input"]
[connection signal="mouse_entered" from="Close/ClickArea" to="." method="_on_click_area_mouse_entered"]
[connection signal="mouse_exited" from="Close/ClickArea" to="." method="_on_click_area_mouse_exited"]
